--- a/README
+++ b/README
@@ -23,8 +23,8 @@ Samples
 Sample files for the reconstruction of ectocarpus are available here:
       ectocyc.sbml_ metacyc_16-5.sbml_ seeds.sbml_ targets.sbml_
 
-.. _ectocyc.sbml: http://www.cs.uni-potsdam.de/~sthiele/bioasp/downloads/samples/ectodata/ectocyc.sbml
-.. _metacyc_16-5.sbml: http://www.cs.uni-potsdam.de/~sthiele/bioasp/downloads/samples/ectodata/metacyc_16-5.sbml
-.. _seeds.sbml: http://www.cs.uni-potsdam.de/~sthiele/bioasp/downloads/samples/ectodata/seeds.sbml
-.. _targets.sbml: http://www.cs.uni-potsdam.de/~sthiele/bioasp/downloads/samples/ectodata/targets.sbml
+.. _ectocyc.sbml: http://bioasp.github.io/downloads/samples/ectodata/ectocyc.sbml
+.. _metacyc_16-5.sbml: http://bioasp.github.io/downloads/samples/ectodata/metacyc_16-5.sbml
+.. _seeds.sbml: http://bioasp.github.io/downloads/samples/ectodata/seeds.sbml
+.. _targets.sbml: http://bioasp.github.io/downloads/samples/ectodata/targets.sbml
 
