--- a/README
+++ b/README
@@ -4,7 +4,9 @@ Installation
 
 You can install meneco by running::
 
-	$ pip install meneco
+	$ pip install --user meneco
+
+The executable scripts can then be found in ~/.local/bin.
 
 
 Usage
@@ -14,7 +16,7 @@ Typical usage is::
 	
 	$ meneco.py draftnetwork.sbml repairnetwork.sbml seeds.sbml targets.sbml
 	
-For more options you can ask for help as follows:
+For more options you can ask for help as follows::
 
 	$ meneco --h
 	    usage: meneco.py [-h] [--enumerate] draftnetwork repairnetwork seeds targets
@@ -33,7 +35,7 @@ For more options you can ask for help as follows:
 Samples
 =======
 
-Sample files for the reconstruction of ectocarpus are available here:
+Sample files for the reconstruction of ectocarpus are available here::
       ectocyc.sbml_ metacyc_16-5.sbml_ seeds.sbml_ targets.sbml_
 
 .. _ectocyc.sbml: http://bioasp.github.io/downloads/samples/ectodata/ectocyc.sbml
