--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,33 +1,40 @@
-1.5.2
------
-use pyasp-1.4.3
+# Changelog
+All notable changes to this project will be documented in this file.
 
-1.5.1
------
-Correctly handle import reactions in the repair db.
+## Unreleased
 
-1.5.0
------
-Make repairnet optional.
-If no repairnet is set meneco only performs a producibility check.
+## v1.5.2 - 2017, Mar 29
+### Changed
+- use pyasp-1.4.3
+- Correctly handle import reactions in the repair db.
 
-1.4.3
------
-port to python 3
-use pyasp-1.4.2
+## v1.5.0 - 2016, Feb 23
+### Changed
+- Make repairnet optional.
+- If no repairnet is set meneco only performs a producibility check.
 
-1.4.2
-----------
-use pyasp-1.3.3
+## v1.4.3 - 2015, Nov 23
+### Changed
+- port to python 3
+- use pyasp-1.4.2
 
-1.4.1
-----------
-use pyasp-1.3.1
+## v1.4.2 - 2014, May 21
+### Changed
+- use pyasp-1.3.3
 
-1.4
-----------
-use pyasp-1.3
+## v1.4.1 - 2014, Mar 6
+### Changed
+- use pyasp-1.3.1
 
-1.0 (unreleased)
-----------------
-Initial release
+## v1.4 - 2014, Mar 4
+### Changed
+- use pyasp-1.3
+
+##  Undocumented versions
+- v1.3.2 	
+- v1.3.1 	
+- v1.3 	
+- v1.2 	
+- v1.1 	
+- v1.0dev
+
