update links to sbm files

--- a/meneco.ipynb
+++ b/meneco.ipynb
@@ -49,7 +49,7 @@
    },
    "outputs": [],
    "source": [
-    "draft_sbml= urlopen('http://www.cs.uni-potsdam.de/~sthiele/bioasp/downloads/samples/ectodata/ectocyc.sbml')\n",
+    "draft_sbml= urlopen('https://raw.githubusercontent.com/bioasp/meneco/master/Ectodata/ectocyc.sbml')\n",
     "draftnet = sbml.readSBMLnetwork(draft_sbml, 'draft')    "
    ]
   },
@@ -68,7 +68,7 @@
    },
    "outputs": [],
    "source": [
-    "seeds_sbml = urlopen('http://www.cs.uni-potsdam.de/~sthiele/bioasp/downloads/samples/ectodata/seeds.sbml')\n",
+    "seeds_sbml = urlopen('https://raw.githubusercontent.com/bioasp/meneco/master/Ectodata/seeds.sbml')\n",
     "seeds = sbml.readSBMLseeds(seeds_sbml)"
    ]
   },
@@ -87,7 +87,7 @@
    },
    "outputs": [],
    "source": [
-    "targets_sbml = urlopen('http://www.cs.uni-potsdam.de/~sthiele/bioasp/downloads/samples/ectodata/targets.sbml')\n",
+    "targets_sbml = urlopen('https://raw.githubusercontent.com/bioasp/meneco/master/Ectodata/targets.sbml')\n",
     "targets = sbml.readSBMLtargets(targets_sbml)"
    ]
   },
