update link to metacyc sbml and meneco version

--- a/meneco.ipynb
+++ b/meneco.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook is a preview demo of [meneco](https://pypi.python.org/pypi/meneco/) combined with the [IPython](http://ipython.org/) interactive environment. This demo assumes you have meneco 1.5.1 already installed.  "
+    "This notebook is a preview demo of [meneco](https://pypi.python.org/pypi/meneco/) combined with the [IPython](http://ipython.org/) interactive environment. This demo assumes you have meneco 1.5.2 already installed.  "
    ]
   },
   {
@@ -29,7 +29,7 @@
    },
    "outputs": [],
    "source": [
-    "from pyasp.asp import *\n",
+    "from pyasp.term import *\n",
     "from urllib.request import urlopen\n",
     "from __meneco__ import query, utils, sbml"
    ]
@@ -198,7 +198,7 @@
     }
    ],
    "source": [
-    "repair_sbml = urlopen('http://www.cs.uni-potsdam.de/~sthiele/bioasp/downloads/samples/ectodata/metacyc_16-5.sbml')\n",
+    "repair_sbml = urlopen('https://raw.githubusercontent.com/bioasp/meneco/master/Ectodata/metacyc_16-5.sbml')\n",
     "repairnet = sbml.readSBMLnetwork(repair_sbml, 'repairnet')"
    ]
   },
