--- a/meneco.ipynb
+++ b/meneco.ipynb
@@ -14,6 +14,18 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xgB9x4323imj",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Meneco demo\n",
+        "\n",
+        "First you need to install Meneco. For example with `pip` ..."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Vd7YkD5WyG6Z",
@@ -27,7 +39,7 @@
       "source": [
         "pip install meneco"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -75,14 +87,11 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "xgB9x4323imj",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "Qzas2YD6395Y"
       },
       "source": [
-        "# Meneco Preview\n",
-        "This notebook is a demo of meneco. This demo assumes you have meneco 2.0.0 installed.\n",
-        "\n",
-        "First you need to import the necessary modules ..."
+        "then you can import the necessary modules ..."
       ]
     },
     {
@@ -97,7 +106,7 @@
         "from urllib.request import urlopen\n",
         "from meneco.meneco import query, utils, sbml"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -107,7 +116,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Next, you can load a draft network from an sbml file and convert it into logic facts ..."
+        "Next, you can load a draft network from an sbml file ..."
       ]
     },
     {
@@ -121,7 +130,7 @@
         "draft_sbml= urlopen('https://raw.githubusercontent.com/bioasp/meneco/master/Ectodata/ectocyc.sbml')\n",
         "draftnet = sbml.readSBMLnetwork(draft_sbml, 'draft') "
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -145,7 +154,7 @@
         "seeds_sbml = urlopen('https://raw.githubusercontent.com/bioasp/meneco/master/Ectodata/seeds.sbml')\n",
         "seeds = sbml.readSBMLseeds(seeds_sbml)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -169,7 +178,7 @@
         "targets_sbml = urlopen('https://raw.githubusercontent.com/bioasp/meneco/master/Ectodata/targets.sbml')\n",
         "targets = sbml.readSBMLtargets(targets_sbml)"
       ],
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -198,7 +207,7 @@
         "unproducible = set(a[0] for pred in model if pred == 'unproducible_target' for a in model[pred])\n",
         "print('{0} unproducible targets:\\n\\t{1}\\n'.format(len(unproducible), '\\n\\t'.join(unproducible)))"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -286,7 +295,7 @@
         "repair_sbml = urlopen('https://raw.githubusercontent.com/bioasp/meneco/master/Ectodata/metacyc_16-5.sbml')\n",
         "repairnet = sbml.readSBMLnetwork(repair_sbml, 'repairnet')"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -319,7 +328,7 @@
         "combinet = draftnet\n",
         "combinet = TermSet(combinet.union(repairnet))"
       ],
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -348,7 +357,7 @@
         "never_producible = set(a[0] for pred in model if pred == 'unproducible_target' for a in model[pred])\n",
         "print('{0} unreconstructable targets:\\n\\t{1}\\n'.format(len(never_producible), '\\n\\t'.join(never_producible)))"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -389,7 +398,7 @@
         "reconstructable_targets = unproducible.difference(never_producible)\n",
         "print('{0} reconstructable targets:\\n\\t{1}\\n'.format(len(reconstructable_targets), '\\n\\t'.join(reconstructable_targets)))"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -482,7 +491,7 @@
         "      essential_reactions = essential_reactions.union(essentials_lst)\n",
         "print('Overall {0} essential reactions found:\\n\\t{1}\\n'.format(len(essential_reactions), '\\n\\t'.join(essential_reactions)))"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -787,7 +796,7 @@
         "print('One minimal completion of size {0}:\\n\\t{1}\\n'.format(\n",
         "            optimum, '\\n\\t'.join(one_min_sol_lst)))"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -873,7 +882,7 @@
         "print('Intersection of all solutions of size {0}:\\n\\t{1}\\n'.format(\n",
         "            optimum, '\\n\\t'.join(cautious_sol_lst)))"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -944,7 +953,7 @@
         "print('Intersection of all solutions of size {0}:\\n\\t{1}\\n'.format(\n",
         "            optimum, '\\n\\t'.join(brave_sol_lst)))"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1063,7 +1072,7 @@
         "            str(count), '\\n\\t'.join(one_min_sol_lst)))\n",
         "   if count == 3:  break"
       ],
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
